test table with indentations in reu_20230623.md

--- a/reu_20230623.md
+++ b/reu_20230623.md
@@ -18,12 +18,18 @@ Objectifs:
 
 ## Tour de compétences
 
-Échelle : -; +; ++; +++
+Échelle de maîtrise: -; +; ++; +++
+En cours: **X**
 
-| 	| 	| 	|
+|  |  |  |
 
-| Activité	| Pierre | Enrique	|
+| Activité | Pierre | Enrique |
 |---|---:|---:|
-| Assemblage (PacBio)	| ++	| -	|
-| Barcoding	| -	| -	|
-| RNAseq	| 	| 	|
+| Assemblage (PacBio) | **X** ++ | - |
+| Barcoding	| - | - |
+| RNAseq | + | + |
+| Annotation fonctionnelle | ++ | ++ |
+| SNPcalling | ++ | **X** ++ |
+| 	Freebayes	| ++ |  |
+| 	Stacks		|  | **X** ++ |
+| Bash (sed, grep, parallel, loops)| ++ | ++ |
