Fin de transcription des notes reu_20230623.md

--- a/reu_20230623.md
+++ b/reu_20230623.md
@@ -25,11 +25,57 @@ En cours: **X**
 
 | Activité | Pierre | Enrique |
 |---|---:|---:|
-| Assemblage (PacBio) | **X** ++ | - |
+| Assemblage - PacBio | **X** ++ | - |
 | Barcoding	| - | - |
 | RNAseq | + | + |
 | Annotation fonctionnelle | ++ | ++ |
-| SNPcalling | ++ | **X** ++ |
-| 	Freebayes	| ++ |  |
-| 	Stacks		|  | **X** ++ |
-| Bash (sed, grep, parallel, loops)| ++ | ++ |
+| SNP calling - Freebayes	| ++ |  |
+| SNP calling - Stacks		|  | **X** ++ |
+| Bash - sed, grep, parallel, loops | ++ | ++ |
+| Slurm | ++ | ++ |
+| Python | - | ++ |
+| R | ++ | + |
+| WF manager - NextFlow		| - | **X** + |
+| WF manager - SnakeMake	| - | - |
+| Conda | ++ | ++ |
+| Contenaires | + | - |
+| Git | + | + |
+| LaTeX | - | ++ |
+| Pretraitement - clean, trim, filter | +++ | +++ |
+| Posttraitement - Dataminig, reformat, extract, plot | ++ | ++ |
+
+
+## Besoins observés
+
+* Concepts en génomique
+	* Plan expérimental (RNAseq, SNPcalling, GFF3)
+	* File formats (SAM, VCF, etc)
+	* Annotation fonctionnelle
+	* Annotation structurelle
+* Best practices for organizing a project, and make life easier when archiving the project
+* Algoritmie: Chacun avec son language de programmation, réaliser une tâche commune lors d'une session
+* Data Mining - Extraction et formatage de données
+	* R - tidyverse
+	* Python - Pandas
+	* Plots: Rbase, [ggplot2, matplotlib, gnuplot] en utilisant le grammar of graphics
+* Machine Learning
+	* classification
+	* regression
+	* clustering
+	* reduction dimmentionnelle
+* Bases de programmation : Se familiariser avec les messages d'erreur
+	* R (et quelques packages couramment utilisés au CBGP)
+	* Python
+	* Bash
+	* Slurm
+
+## Types d'animation envisagés
+
+* Devélopper les compétences des gens qui en ont déjà
+* Échange de compétences: Format hackathon
+* Formation des "nouveaux" avec des données
+	* Fastq et quality check
+	* Format soit présentation, soit atelier pratique (workshop)
+* Comment rendre les animations plus attractives et moins les conciderer comme une "Réunion"
+* Favoriser le désenclavement du laboratoire en invitant d'autres collègues de Montpellier
+
