Added idea reu_20230623.md
Idea for first meeting added

--- a/reu_20230623.md
+++ b/reu_20230623.md
@@ -76,4 +76,5 @@ En cours: **X**
 	* Format soit présentation, soit atelier pratique (workshop)
 * Comment rendre les animations plus attractives et moins les conciderer comme une "Réunion"
 * Favoriser le désenclavement du laboratoire en invitant d'autres collègues de Montpellier
+* Idée de première animation: Faire des erreurs dans un projet github et le resoudre. Par exemple effacer un fichier et le réétablir à une date précédente
 
