--- a/reu_20230921.md
+++ b/reu_20230921.md
@@ -1,7 +1,24 @@
-## Atelier ligne de commande et SLURM
+
+Réunion Groupe Bioinfo
+Details
+
+Date: 20230921
+
+Participants:
+
+    Pierre Nouhaud
+    Enrique Ortega
+
+Objectifs:
+
+    Préparer la reunion avec la direction.
+
+
+## Rétour de l'Atelier ligne de commande et SLURM
 
 La dernière itération de l'atélier ciblée pour les biologistes des populations s'est averée plus longue que prevu.
-Deux demi-journées n'est pas assez. 
+Deux demi-journées n'est pas assez.
+La complèxité des analyses que les biologistes veulent faire ne correspondent pas à un niveau basique facile, ça démande des compètences plus spécialisées et au mélange de différentes technologies.
 
 Je propose de faire 3 ou 4 demi-journées avec le programme suivant:
 
