--- a/reu_20230921.md
+++ b/reu_20230921.md
@@ -6,12 +6,12 @@ Date: 20230921
 
 Participants:
 
-    Pierre Nouhaud
-    Enrique Ortega
+* Pierre Nouhaud
+* Enrique Ortega
 
 Objectifs:
 
-    Préparer la reunion avec la direction.
+* Préparer la reunion avec la direction.
 
 
 ## Rétour de l'Atelier ligne de commande et SLURM
@@ -40,13 +40,13 @@ Démander au CBGP si une liste de sujets les intéressent, et à quel niveau: Ap
 
 * bash
 * slurm
-* filtrer - grep; tydiverse
+* filtrer - grep | awk | sed ; tydiverse
 * fastq - multiqc
 * mapping
 * SNPcalling
 * Manipulation VCF
 * Optimisation
-* indseq (full individual; low coverage
+* indseq (full individual; low coverage)
 * fullseq
 * assemblages
 * "Benchmark" - Comparaison de softs - comment faire, organisation, lancement et planification expérimentale
