acceptance of expectations reu_20230926.md

--- a/reu_20230926.md
+++ b/reu_20230926.md
@@ -57,3 +57,5 @@ Leur objectif est de:
 
 * Former le personnel à des technologies qu'ils ne maîtrisent pas.
 * Rafraîchir les connaissances de ceux qui ont suivi ou utilisé ces technologies.
+
+Le groupe bioinfo est d'accord at accepte l'ensemble des attentes.
